--- a/code.ipynb
+++ b/code.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading Roboflow workspace...\n",
+      "loading Roboflow project...\n",
+      "Processing Image with YOLO...\n",
+      "\n",
+      "0: 448x640 2 dogs, 292.9ms\n",
+      "Speed: 2.3ms preprocess, 292.9ms inference, 1.6ms postprocess per image at shape (1, 3, 448, 640)\n",
+      "Roboflow Prediction Response: {'predictions': [{'inference_id': '156ecbb8-c45f-4a6a-aa40-cdea54b1e9c9', 'time': 0.34250502299983054, 'image': {'width': 464, 'height': 538}, 'predictions': [{'class': 'Guard dog', 'class_id': 0, 'confidence': 0.9957}, {'class': 'Sheep', 'class_id': 6, 'confidence': 0.0011}, {'class': 'BH-Dorper', 'class_id': 1, 'confidence': 0.001}, {'class': 'WH-dorper', 'class_id': 5, 'confidence': 0.0008}, {'class': 'Red cow', 'class_id': 2, 'confidence': 0.0006}, {'class': 'Black cow', 'class_id': 3, 'confidence': 0.0005}, {'class': 'Coyote', 'class_id': 4, 'confidence': 0.0005}], 'top': 'Guard dog', 'confidence': 0.9957, 'image_path': 'Output/Detected_Animals\\\\object_20241206033004895164.jpg', 'prediction_type': 'ClassificationModel'}], 'image': (464, 538)}\n",
+      "Roboflow Prediction Response: {'predictions': [{'inference_id': 'f32f0789-0b52-4199-a16d-21a832731c3e', 'time': 0.35311597200052347, 'image': {'width': 428, 'height': 588}, 'predictions': [{'class': 'Guard dog', 'class_id': 0, 'confidence': 0.9959}, {'class': 'BH-Dorper', 'class_id': 1, 'confidence': 0.0008}, {'class': 'WH-dorper', 'class_id': 5, 'confidence': 0.0008}, {'class': 'Sheep', 'class_id': 6, 'confidence': 0.0008}, {'class': 'Red cow', 'class_id': 2, 'confidence': 0.0006}, {'class': 'Black cow', 'class_id': 3, 'confidence': 0.0006}, {'class': 'Coyote', 'class_id': 4, 'confidence': 0.0006}], 'top': 'Guard dog', 'confidence': 0.9959, 'image_path': 'Output/Detected_Animals\\\\object_20241206033011251456.jpg', 'prediction_type': 'ClassificationModel'}], 'image': (428, 588)}\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -19,23 +34,24 @@
     "\n",
     "# Initialize YOLOv11 and Roboflow models\n",
     "model = YOLO(\"yolo11m.pt\")  # Use YOLOv11 model\n",
-    "rf = Roboflow(api_key=\"7P6wSkFD6Zb39ZYTL84S\")  # Updated API Key\n",
-    "project = rf.workspace(\"animal-class\").project(\"animal-class-cnxhg\")  # Updated Workspace and Project Name\n",
-    "rf_model = project.version(5).model  # Use Version 5 of the Model\n",
+    "rf = Roboflow(api_key=\"7P6wSkFD6Zb39ZYTL84S\")  # Private API Key \n",
+    "project = rf.workspace(\"animal-class\").project(\"animal-class-cnxhg\")  #  Workspace and Project Name\n",
+    "rf_model = project.version(5).model  # Use Version 5 of the Model diffrent version 1-5 excit but 5 recomended \n",
     "\n",
     "# Set up output directories\n",
     "output_dir_detected = \"Output/Detected_Animals\"\n",
     "output_dir_classified = \"Output/Classified_Animals\"\n",
     "output_dir_processed_video = \"Output/Processed_Videos\"\n",
-    "os.makedirs(output_dir_detected, exist_ok=True)\n",
-    "os.makedirs(output_dir_classified, exist_ok=True)\n",
-    "os.makedirs(output_dir_processed_video, exist_ok=True)\n",
+    "\n",
+    "os.makedirs(output_dir_detected, exist_ok=True) #no error if directories already exist.\n",
+    "os.makedirs(output_dir_classified, exist_ok=True)#no error if directories already exist.\n",
+    "os.makedirs(output_dir_processed_video, exist_ok=True)#no error if directories already exist.\n",
     "\n",
     "\n",
     "# Function to save cropped images for each detection\n",
-    "def save_cropped_image(image_rgb, detection):\n",
-    "    x1, y1, x2, y2, conf, cls_id = map(int, detection)\n",
-    "    cropped_image = image_rgb[y1:y2, x1:x2]\n",
+    "def save_cropped_image(image_rgb, detection): #take the image \n",
+    "    x1, y1, x2, y2, conf, cls_id = map(int, detection) # boxes coordinates\n",
+    "    cropped_image = image_rgb[y1:y2, x1:x2] # crop the image only inside the box \n",
     "    cropped_filename = f'object_{datetime.now().strftime(\"%Y%m%d%H%M%S%f\")}.jpg'\n",
     "    cropped_path = os.path.join(output_dir_detected, cropped_filename)\n",
     "    cv2.imwrite(cropped_path, cv2.cvtColor(cropped_image, cv2.COLOR_RGB2BGR))\n",
@@ -46,9 +62,9 @@
     "class ObjectDetectionApp:\n",
     "    def __init__(self, root):\n",
     "        self.root = root\n",
-    "        self.root.title(\"Animal Detection and Classification \")\n",
-    "        self.root.geometry(\"900x800\")\n",
-    "        self.root.configure(bg=\"#F5F5F5\")  # Light gray background\n",
+    "        self.root.title(\"Animal Detection and Classification \") # title\n",
+    "        self.root.geometry(\"900x800\")# window size\n",
+    "        self.root.configure(bg=\"#F5F5F5\")  #  gray background\n",
     "\n",
     "        # Header\n",
     "        header = tk.Label(\n",
@@ -135,7 +151,7 @@
     "        # To store the last uploaded image path\n",
     "        self.last_image_path = None\n",
     "\n",
-    "    def upload_file(self):\n",
+    "    def upload_file(self): # let the user browse an image or video to upload must be jpg/png/mp4 file only \n",
     "        file_path = filedialog.askopenfilename(filetypes=[(\"Image/Video files\", \"*.jpg *.png *.mp4\")])\n",
     "        if file_path:\n",
     "            if file_path.endswith(('.jpg', '.png')):\n",
@@ -146,7 +162,7 @@
     "            else:\n",
     "                messagebox.showerror(\"Invalid File\", \"Please upload a .jpg, .png, or .mp4 file.\")\n",
     "\n",
-    "    def process_image(self, image_path):\n",
+    "    def process_image(self, image_path): # pass the image to yolo then crop the detection and sent it to roboflow and display results on gui \n",
     "        image = cv2.imread(image_path)\n",
     "        image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "        print(\"Processing Image with YOLO...\")\n",
@@ -154,7 +170,7 @@
     "        processed_img_path = self.detect_and_classify(image_rgb, results)\n",
     "        self.display_image(processed_img_path)\n",
     "\n",
-    "    def process_video(self, video_path):\n",
+    "    def process_video(self, video_path): # same as images \n",
     "        cap = cv2.VideoCapture(video_path)\n",
     "        frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
     "        frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
